--- a/style.css
+++ b/style.css
@@ -4,15 +4,18 @@
 
 body { background-color: #000; margin-left: 10%; margin-right: 10%; }
 
-h1 { color: #fff; font-family: cmtitle; font-size: 75px; }
+h1 { color: #fff; font-size: 75px; margin-top: -5px; }
 
-	.title { color: #fff; text-decoration: none; }
+	.title { color: #fff; font-family: cmtitle; text-decoration: none; }
 	.title:hover { color: #198844; }
+
+h2 { color: #fff; font-family: cmtitle; font-size: 25px; margin-top: -25px; }
 
 ul { color: #fff; list-style: none; font-family: cmmono; font-size: 20px; }
 ul li::before { content: "-"; font-weight: bold; display: inline-block; width: 1em; margin-left: -2em; }
 
 p { color: #fff; font-family: cmserif; font-size: 20px; }
 
-a { color: #fff; text-decoration: none;}
+a { color: #fff; font-family: cmmono; text-decoration: none;}
 a:hover { color: #198844; }
+	.menu { margin-top: 10%; }
