--- a/style.css
+++ b/style.css
@@ -1,13 +1,10 @@
-@font-face { font-family: "cmtitle"; src:url("fonts/cm-serif-bold.ttf"); }
-@font-face { font-family: "cmserif"; src:url("fonts/cm-serif.ttf"); }
-@font-face { font-family: "cmmono"; src:url("fonts/cm-monospace.ttf"); }
+@font-face { font-family: cmtitle; src:url(fonts/cm-serif-bold.ttf); }
+@font-face { font-family: cmserif; src:url(fonts/cm-serif.ttf); }
+@font-face { font-family: cmmono; src:url(fonts/cm-monospace.ttf); }
 
 body { background-color: #000; margin-left: 10%; margin-right: 10%; }
 
-h1 { color: #fff; font-size: 75px; margin-top: -5px; }
-
-	.title { color: #fff; font-family: cmtitle; text-decoration: none; }
-	.title:hover { color: #198844; }
+h1 { color: #fff; font-size: 75px; font-family: cmtitle; margin-top: 5%; }
 
 h2 { color: #fff; font-family: cmtitle; font-size: 25px; margin-top: -25px; }
 
@@ -18,4 +15,6 @@ p { color: #fff; font-family: cmserif; font-size: 20px; }
 
 a { color: #fff; font-family: cmmono; text-decoration: none;}
 a:hover { color: #198844; }
-	.menu { margin-top: 10%; }
+	.menu { margin-top: 50px; padding: 5px; float: right;}
+	.recolor { filter: invert(100%); }
+	.recolor:hover { filter: invert(38%) sepia(93%) saturate(364%) hue-rotate(90deg) brightness(92%) contrast(98%); }
